# ilmen-dot-parser

./: Cargo.toml  README.md
src/: lib.rs
src/dot_parser/: attribut.rs  attribute.rs  attributs.rs  dot_graph.rs  dot_parser.rs  edge.rs  graph_type.rs  mod.rs  node.rs  parsing_error.rs  type_relation.rs
src/dot_parser/petgraph/: mod.rs  petgraph.rs
